# httpproject

./: CMakeLists.txt.user.d2912c9.22  CMyHttpServer.cpp  MyHttpServer.cpp  database.cpp  database.h  httpconn.cpp  httpconn.h  locker.cpp  locker.h  main.cpp  network.cpp
QtApplication1/: QtApplication1.sln
QtApplication1/QtApplication1/: client.h  client.ui  clienttest.qrc  cryptogram.cpp  cryptogram.h  curlhttp.cpp  curlhttp.h  define.h  http.cpp  http.h  main.cpp  plainhttp.cpp
QtApplication1/QtApplication1/x64/Debug/: QtApplication1.exe.recipe
QtApplication1/QtApplication1/x64/Debug/QtApplication1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  QtApplication1.lastbuildstate  QtApplication1.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  moc.read.1u.tlog  moc.write.1u.tlog  rcc.write.1u.tlog  uic.read.1u.tlog  uic.write.1u.tlog
QtApplication1/QtApplication1/x64/Debug/moc/: moc_client.cpp  moc_clienttest.cpp
QtApplication1/QtApplication1/x64/Debug/qmake/temp/: qtvars.vcxproj  qtvars_x64_Debug.props
QtApplication1/QtApplication1/x64/Debug/rcc/: qrc_clienttest.cpp
QtApplication1/QtApplication1/x64/Debug/uic/: ui_client.h  ui_clienttest.h
QtApplication1/QtApplication1/x64/Release/: QtApplication1.exe.recipe
QtApplication1/QtApplication1/x64/Release/QtApplication1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  QtApplication1.lastbuildstate  QtApplication1.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  moc.read.1u.tlog  moc.write.1u.tlog  rcc.read.1u.tlog  rcc.write.1u.tlog  uic.read.1u.tlog  uic.write.1u.tlog
QtApplication1/QtApplication1/x64/Release/qmake/temp/: .qmake.stash  props.txt  qtvars.vcxproj  qtvars_x64_Release.props
QtApplication1/QtApplication1/x64/Release/uic/: ui_client.h
client/: CMakeLists.txt
client/QtApplication1/: QtApplication1.vcxproj  QtApplication1.vcxproj.filters  client.cpp  define.h  plainhttp.cpp  plainhttp.h  userbroker.cpp  userbroker.h
resources/4/: 1  14  19  32  35  6
server/: CMakeLists.txt  CMakeLists.txt.user.8982792.4.8-pre1  CMyHttpServer.h  MyDefine.h  MyHttpCmdDef.h  Threadpool.h  http.cpp  http.h  network.h
server/resources/4/: 12  15  18  23  25  26  27  36  7
server/server1/: CMakeLists.txt  CMyHttpServer.cpp  CMyHttpServer.h  MyDefine.h  MyHeader.h  MyHttpCmdDef.h  ThreadPool.h  cryptogram.cpp  cryptogram.h  database.cpp  define.h  http.cpp  http.h  main.cpp  network.cpp  network.h  server1.h  serverbroker.cpp  serverbroker.h
server1/: CMakeLists.txt
server1/build-server1-C_C_Qt-Debug/: CMakeCache.txt  qtcsettings.cmake
server1/server1/: CMakeLists.txt  CMakeLists.txt.autosave  database.h  http.cpp  http.h  logger.cpp  logger.h  main.cpp  network.cpp  network.h  server1.cpp  server1.vcxproj  serverbroker.cpp  serverbroker.h
